<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    tools:viewBindingIgnore="true">

    <ImageButton
        android:id="@+id/back_from_register_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_arrow_back_24"
        android:background="@drawable/back_btn_background"
        android:padding="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/sign_up_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SIGN UP"
        android:textColor="#000"
        android:textSize="26sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <EditText
            android:id="@+id/username_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:hint="@string/username"
            android:paddingStart="20dp"
            android:textColorHint="@color/hints_color"
            android:background="@drawable/edit_txt_shape"
            android:inputType="textPersonName"/>

        <EditText
            android:id="@+id/email_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:hint="@string/email"
            android:textColorHint="@color/hints_color"
            android:paddingStart="20dp"
            android:background="@drawable/edit_txt_shape"
            android:layout_marginTop="20dp"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/password_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:hint="@string/password"
            android:textColorHint="@color/hints_color"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:background="@drawable/edit_txt_shape"
            android:layout_marginTop="20dp"/>

        <LinearLayout
            android:id="@+id/male_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">
            <CheckBox
                android:id="@+id/male_check_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:textSize="18sp"/>

            <CheckBox
                android:id='@+id/female_check_register'
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:textSize="18sp"
                android:layout_marginStart="40dp"/>

        </LinearLayout>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/sign_in_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/sign_up_btn"
            android:text="@string/sign_up"
            android:textSize="18sp"
            android:textColor="#fff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/terms_of_service_and_privacy_policy"
            android:textSize="16sp"
            android:layout_marginTop="60dp"/>
    </LinearLayout>


</RelativeLayout>