<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:background="@color/white">

    <ImageButton
        android:id="@+id/back_from_settings_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_arrow_back_24"
        android:background="@drawable/back_btn_background"
        android:padding="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/settings_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SETTINGS"
        android:textColor="#000"
        android:textSize="26sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        />

    <RelativeLayout
        android:id="@+id/profile_linear"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_below="@+id/settings_txt"
        android:layout_marginTop="40dp"
        android:background="@drawable/items_settings_shape">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:layout_marginStart="20dp"
            android:textSize="20sp"
            android:layout_centerVertical="true"
            android:textColor="#000"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>


        <ImageButton
            android:id="@+id/to_profile_settings_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="5dp"
            android:background="#f7f7f7"
            android:src="@drawable/ic_baseline_navigate_next_24" />


    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/theme_liner"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/profile_linear"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/items_settings_shape">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme"
            android:layout_marginStart="20dp"
            android:layout_centerVertical="true"
            android:textSize="20sp"
            android:textColor="#000"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>


        <Switch
            android:id="@+id/theme_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="5dp"
            android:background="#f7f7f7"
            android:theme="@style/SwitchTheme"
            tools:ignore="UseSwitchCompatOrMaterialXml" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/lang_linear"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/theme_liner"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/items_settings_shape">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lang"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:textSize="20sp"
            android:textColor="#000"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:background="@drawable/spiner_shape"
            android:entries="@array/languages" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/text_size_linear"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_below="@+id/lang_linear"
        android:layout_marginTop="20dp"
        android:background="@drawable/items_settings_shape">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_size"
            android:layout_marginStart="20dp"
            android:layout_centerVertical="true"
            android:textSize="20sp"
            android:textColor="#000"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <androidx.appcompat.widget.AppCompatSpinner

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:background="@drawable/spiner_shape"
            android:entries="@array/textSizes" />

    </RelativeLayout>
</RelativeLayout>